Edited wiki page ProjectUpdates through web user interface.

--- a/wiki/ProjectUpdates.wiki
+++ b/wiki/ProjectUpdates.wiki
@@ -1,5 +1,5 @@
 === SVN Updates === 
-<wiki:gadget url="get-simple.info/googlecode/com1.xml" up_projectName="get-simple-cms" width="800" height="100"/> 
+<wiki:gadget url="get-simple.info/googlecode/com.xml" up_projectName="get-simple-cms" width="800" height="100"/> 
 === Updates to All Issues (including closed/fixed issues) === 
 <wiki:gadget url="get-simple.info/googlecode/gc23.xml" up_projectName="get-simple-cms" width="800" height="150"/> 
 === Detailed Updates to Open Issues ===
