--- a/wiki/ProjectUpdates.wiki
+++ b/wiki/ProjectUpdates.wiki
@@ -1,6 +1,6 @@
 === SVN Updates === 
-<wiki:gadget url="get-simple.info/googlecode/com.xml" up_projectName="get-simple-cms" width="800" height="100"/> 
+<wiki:gadget url="http://get-simple.info/googlecode/com.xml" up_projectName="get-simple-cms" width="800" height="100"/> 
 === Updates to All Issues (including closed/fixed issues) === 
-<wiki:gadget url="get-simple.info/googlecode/gc23.xml" up_projectName="get-simple-cms" width="800" height="150"/> 
+<wiki:gadget url="http://get-simple.info/googlecode/gc23.xml" up_projectName="get-simple-cms" width="800" height="150"/> 
 === Detailed Updates to Open Issues ===
-<wiki:gadget url="get-simple.info/googlecode/t6.xml" up_projectName="get-simple-cms" width="800" height="250"/> 
+<wiki:gadget url="http://get-simple.info/googlecode/t6.xml" up_projectName="get-simple-cms" width="800" height="250"/> 
